# valor

./: Cargo.toml  example.env
src/: main.rs
src/lib/: app.rs  app_state.rs  lib.rs  state.rs  watcher.rs
src/lib/app/: app_init.rs
