[package]
name = "valor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "valor_lib"
path = "src/lib/lib.rs"

[dependencies]
base64 = "0.21.0"
dotenv = "0.15.0"
notify = "5.1.0"
reqwest = "0.11.16"
league-client-connector = { git = "https://github.com/Zynh0722/league-client-connector.git", branch = "master", features = ["lockfile_path"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
native-tls = "0.2.11"
futures-util = "0.3.28"
egui = "0.22.0"
eframe = "0.22.0"
